--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,8 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
     id 'dagger.hilt.android.plugin'
-
+    id "kotlin-parcelize"
+    id "androidx.navigation.safeargs.kotlin"
 }
 
 
@@ -28,7 +29,7 @@ android {
         }
     }
 
-    buildFeatures{
+    buildFeatures {
         dataBinding = true
     }
     compileOptions {
@@ -40,7 +41,10 @@ android {
         freeCompilerArgs += [
                 '-Xjvm-default=enable'
         ]
-      //  freeCompilerArgs = ['-Xjvm-default=all|all-compatibility']
+
+    }
+    packagingOptions {
+        resources.excludes.add("META-INF/*")
     }
 }
 
@@ -62,10 +66,7 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
     // dagger 2
-  /* implementation 'com.google.dagger:dagger:2.44'
-    annotationProcessor "com.google.dagger:dagger-compiler:2.44"
-*/
-    def hilt_version="2.44"
+    def hilt_version = "2.44"
     implementation "com.google.dagger:hilt-android:$hilt_version"
     kapt "com.google.dagger:hilt-compiler:$hilt_version"
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
@@ -80,9 +81,14 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
     // fragment_navigation
     implementation "androidx.fragment:fragment-ktx:1.5.2"
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
-    implementation "androidx.navigation:navigation-compose:2.5.2"
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.5.3'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
+    implementation "androidx.navigation:navigation-compose:2.5.3"
     //bottomsheet
     implementation 'com.google.android.material:material:1.2.0-alpha02'
+    //coil
+    implementation("io.coil-kt:coil:1.1.1")
+    //unitTest
+    implementation 'org.junit.jupiter:junit-jupiter-api:5.5.1'
+    androidTestImplementation "com.google.truth:truth::0.40" //
 }
